Colunas temporais colocadas

--- a/taxi_fare.ipynb
+++ b/taxi_fare.ipynb
@@ -68,7 +68,7 @@
       "metadata": {
         "id": "yXyjMuPyrYeP",
         "colab_type": "code",
-        "outputId": "9772188a-b646-4bfe-aed9-c8a67ff7389d",
+        "outputId": "240db333-4294-4a87-9f54-7536a75074b2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
@@ -80,7 +80,7 @@
         "\n",
         "chunk.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -200,7 +200,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 38
+          "execution_count": 59
         }
       ]
     },
@@ -208,11 +208,7 @@
       "metadata": {
         "id": "kHQ67jNLru90",
         "colab_type": "code",
-        "outputId": "e587d710-4269-418b-8c7a-049cba7cd3b8",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 173
-        }
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -229,7 +225,7 @@
         "\"\"\"\n",
         "\n",
         "chunk = chunk[\n",
-        "               ( abs(chunk['pickup_latitude']) <= 90 ) | ( abs(chunk['pickup_longitude']) <= 180 ) | ( abs(chunk['dropoff_latitude']) <= 90 ) | ( abs(chunk['dropoff_longitude']) <= 180 )\n",
+        "               ( abs(chunk['pickup_latitude']) <= 90 ) & ( abs(chunk['pickup_longitude']) <= 180 ) & ( abs(chunk['dropoff_latitude']) <= 90 ) & ( abs(chunk['dropoff_longitude']) <= 180 )\n",
         "             ]\n",
         "\n",
         "\"\"\"\n",
@@ -244,41 +240,34 @@
         "               (chunk['fare_amount'] >= 0)\n",
         "             ]\n",
         "\n",
-        "chunk.count()"
+        "chunk.count()\n",
+        "\n",
+        "\"\"\"\n",
+        "----- Remover, caso existam, dados nulos (faltantes) -------------\n",
+        "\"\"\"\n",
+        "chunk = chunk.drop(chunk[chunk.isnull().any(1)].index, axis=0)"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "key                  999912\n",
-              "fare_amount          999912\n",
-              "pickup_datetime      999912\n",
-              "pickup_longitude     999912\n",
-              "pickup_latitude      999912\n",
-              "dropoff_longitude    999912\n",
-              "dropoff_latitude     999912\n",
-              "passenger_count      999912\n",
-              "dtype: int64"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 53
-        }
-      ]
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "3fgjQh_m5LXw",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
         "id": "xF4VgmntsXs2",
         "colab_type": "code",
-        "outputId": "05db7746-c642-4572-b81c-dccb77558f39",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1094
-        }
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -317,242 +306,88 @@
         "haversine_1('pickup_latitude', 'pickup_longitude', 'dropoff_latitude', 'dropoff_longitude')"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0          1.030764\n",
-              "1          8.450134\n",
-              "2          1.389525\n",
-              "3          2.799270\n",
-              "4          1.999157\n",
-              "5          3.787239\n",
-              "6          1.555807\n",
-              "7          4.155444\n",
-              "8          1.253232\n",
-              "9          2.849627\n",
-              "10         1.374577\n",
-              "11         0.000000\n",
-              "12         0.717767\n",
-              "13         2.019384\n",
-              "14         1.671445\n",
-              "15         0.000000\n",
-              "16         2.609774\n",
-              "17         1.511904\n",
-              "18         0.921952\n",
-              "19         0.399179\n",
-              "20         1.686861\n",
-              "21         2.292470\n",
-              "22         0.924296\n",
-              "23         1.403958\n",
-              "24         1.017773\n",
-              "25         2.531947\n",
-              "26         0.000000\n",
-              "27         0.328771\n",
-              "28         4.073463\n",
-              "29         0.808153\n",
-              "            ...    \n",
-              "999970     1.800660\n",
-              "999971    16.888650\n",
-              "999972     0.443274\n",
-              "999973     0.509990\n",
-              "999974     6.774274\n",
-              "999975     9.357706\n",
-              "999976     4.093045\n",
-              "999977     5.314221\n",
-              "999978     1.842736\n",
-              "999979     3.689741\n",
-              "999980     4.456025\n",
-              "999981     3.622864\n",
-              "999982     1.162477\n",
-              "999983     0.806466\n",
-              "999984     8.401025\n",
-              "999985     1.344648\n",
-              "999986     0.821492\n",
-              "999987     0.240398\n",
-              "999988     0.000000\n",
-              "999989     1.102526\n",
-              "999990     1.424234\n",
-              "999991     3.036671\n",
-              "999992     1.574966\n",
-              "999993     3.742170\n",
-              "999994     6.433776\n",
-              "999995     1.879763\n",
-              "999996     0.000000\n",
-              "999997     1.761741\n",
-              "999998     1.842683\n",
-              "999999     0.758051\n",
-              "Length: 999912, dtype: float64"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 55
-        }
-      ]
+      "outputs": []
     },
     {
       "metadata": {
         "id": "vmDmw-jYxNxM",
         "colab_type": "code",
-        "outputId": "ab6abc16-d908-47a9-ab3c-7a7abdc5f2f3",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 206
-        }
-      },
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>key</th>\n",
-              "      <th>fare_amount</th>\n",
-              "      <th>pickup_datetime</th>\n",
-              "      <th>pickup_longitude</th>\n",
-              "      <th>pickup_latitude</th>\n",
-              "      <th>dropoff_longitude</th>\n",
-              "      <th>dropoff_latitude</th>\n",
-              "      <th>passenger_count</th>\n",
-              "      <th>distancia</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>2009-06-15 17:26:21.0000001</td>\n",
-              "      <td>4.5</td>\n",
-              "      <td>2009-06-15 17:26:21 UTC</td>\n",
-              "      <td>-73.844311</td>\n",
-              "      <td>40.721319</td>\n",
-              "      <td>-73.841610</td>\n",
-              "      <td>40.712278</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1.030764</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>2010-01-05 16:52:16.0000002</td>\n",
-              "      <td>16.9</td>\n",
-              "      <td>2010-01-05 16:52:16 UTC</td>\n",
-              "      <td>-74.016048</td>\n",
-              "      <td>40.711303</td>\n",
-              "      <td>-73.979268</td>\n",
-              "      <td>40.782004</td>\n",
-              "      <td>1</td>\n",
-              "      <td>8.450134</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>2011-08-18 00:35:00.00000049</td>\n",
-              "      <td>5.7</td>\n",
-              "      <td>2011-08-18 00:35:00 UTC</td>\n",
-              "      <td>-73.982738</td>\n",
-              "      <td>40.761270</td>\n",
-              "      <td>-73.991242</td>\n",
-              "      <td>40.750562</td>\n",
-              "      <td>2</td>\n",
-              "      <td>1.389525</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>2012-04-21 04:30:42.0000001</td>\n",
-              "      <td>7.7</td>\n",
-              "      <td>2012-04-21 04:30:42 UTC</td>\n",
-              "      <td>-73.987130</td>\n",
-              "      <td>40.733143</td>\n",
-              "      <td>-73.991567</td>\n",
-              "      <td>40.758092</td>\n",
-              "      <td>1</td>\n",
-              "      <td>2.799270</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>2010-03-09 07:51:00.000000135</td>\n",
-              "      <td>5.3</td>\n",
-              "      <td>2010-03-09 07:51:00 UTC</td>\n",
-              "      <td>-73.968095</td>\n",
-              "      <td>40.768008</td>\n",
-              "      <td>-73.956655</td>\n",
-              "      <td>40.783762</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1.999157</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "                             key  fare_amount          pickup_datetime  \\\n",
-              "0    2009-06-15 17:26:21.0000001          4.5  2009-06-15 17:26:21 UTC   \n",
-              "1    2010-01-05 16:52:16.0000002         16.9  2010-01-05 16:52:16 UTC   \n",
-              "2   2011-08-18 00:35:00.00000049          5.7  2011-08-18 00:35:00 UTC   \n",
-              "3    2012-04-21 04:30:42.0000001          7.7  2012-04-21 04:30:42 UTC   \n",
-              "4  2010-03-09 07:51:00.000000135          5.3  2010-03-09 07:51:00 UTC   \n",
-              "\n",
-              "   pickup_longitude  pickup_latitude  dropoff_longitude  dropoff_latitude  \\\n",
-              "0        -73.844311        40.721319         -73.841610         40.712278   \n",
-              "1        -74.016048        40.711303         -73.979268         40.782004   \n",
-              "2        -73.982738        40.761270         -73.991242         40.750562   \n",
-              "3        -73.987130        40.733143         -73.991567         40.758092   \n",
-              "4        -73.968095        40.768008         -73.956655         40.783762   \n",
-              "\n",
-              "   passenger_count  distancia  \n",
-              "0                1   1.030764  \n",
-              "1                1   8.450134  \n",
-              "2                2   1.389525  \n",
-              "3                1   2.799270  \n",
-              "4                1   1.999157  "
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 56
-        }
-      ]
-    },
-    {
-      "metadata": {
-        "id": "qDFecUfZ1X2R",
-        "colab_type": "code",
         "colab": {}
       },
       "cell_type": "code",
       "source": [
-        ""
+        "# converter string para date_time, para obtermos os dados temporais\n",
+        "\n",
+        "chunk['key']             = pd.to_datetime(chunk['key'])\n",
+        "\n",
+        "chunk['pickup_datetime'] = pd.to_datetime(chunk['pickup_datetime'])"
       ],
       "execution_count": 0,
       "outputs": []
     },
     {
       "metadata": {
+        "id": "qDFecUfZ1X2R",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 191
+        },
+        "outputId": "a875e92d-8149-439d-e322-d33af0488fe6"
+      },
+      "cell_type": "code",
+      "source": [
+        "# Olhando a cara dos atributos dos dados após a conversão\n",
+        "\n",
+        "chunk.dtypes"
+      ],
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "key                  datetime64[ns]\n",
+              "fare_amount                 float64\n",
+              "pickup_datetime      datetime64[ns]\n",
+              "pickup_longitude            float64\n",
+              "pickup_latitude             float64\n",
+              "dropoff_longitude           float64\n",
+              "dropoff_latitude            float64\n",
+              "passenger_count               int64\n",
+              "distancia                   float64\n",
+              "dtype: object"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 79
+        }
+      ]
+    },
+    {
+      "metadata": {
         "id": "PdYL01iw0hRc",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "# Separando os dados temporais para podermos visualizar-los melhor\n",
+        "\n",
+        "chunk['Ano'] = chunk['pickup_datetime'].dt.year\n",
+        "chunk['Mes'] = chunk['pickup_datetime'].dt.month\n",
+        "chunk['Dia'] = chunk['pickup_datetime'].dt.day\n",
+        "chunk['Dia da semana'] = chunk['pickup_datetime'].dt.dayofweek\n",
+        "chunk['Horario'] = chunk['pickup_datetime'].dt.hour"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "VDEGRPWr4POy",
         "colab_type": "code",
         "colab": {}
       },
