Elaboração das hipóteses

--- a/taxi_fare.ipynb
+++ b/taxi_fare.ipynb
@@ -68,7 +68,7 @@
       "metadata": {
         "id": "yXyjMuPyrYeP",
         "colab_type": "code",
-        "outputId": "240db333-4294-4a87-9f54-7536a75074b2",
+        "outputId": "c70f98db-5a74-4515-b6ab-caa85e236bf2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
@@ -80,7 +80,7 @@
         "\n",
         "chunk.head()"
       ],
-      "execution_count": 59,
+      "execution_count": 98,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -200,7 +200,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 59
+          "execution_count": 98
         }
       ]
     },
@@ -267,7 +267,11 @@
       "metadata": {
         "id": "xF4VgmntsXs2",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1094
+        },
+        "outputId": "ec0f6f3a-f7fc-4078-9b73-9108a9d1b24c"
       },
       "cell_type": "code",
       "source": [
@@ -305,8 +309,82 @@
         "\n",
         "haversine_1('pickup_latitude', 'pickup_longitude', 'dropoff_latitude', 'dropoff_longitude')"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 100,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0          1.030764\n",
+              "1          8.450134\n",
+              "2          1.389525\n",
+              "3          2.799270\n",
+              "4          1.999157\n",
+              "5          3.787239\n",
+              "6          1.555807\n",
+              "7          4.155444\n",
+              "8          1.253232\n",
+              "9          2.849627\n",
+              "10         1.374577\n",
+              "11         0.000000\n",
+              "12         0.717767\n",
+              "13         2.019384\n",
+              "14         1.671445\n",
+              "15         0.000000\n",
+              "16         2.609774\n",
+              "17         1.511904\n",
+              "18         0.921952\n",
+              "19         0.399179\n",
+              "20         1.686861\n",
+              "21         2.292470\n",
+              "22         0.924296\n",
+              "23         1.403958\n",
+              "24         1.017773\n",
+              "25         2.531947\n",
+              "26         0.000000\n",
+              "27         0.328771\n",
+              "28         4.073463\n",
+              "29         0.808153\n",
+              "            ...    \n",
+              "999970     1.800660\n",
+              "999971    16.888650\n",
+              "999972     0.443274\n",
+              "999973     0.509990\n",
+              "999974     6.774274\n",
+              "999975     9.357706\n",
+              "999976     4.093045\n",
+              "999977     5.314221\n",
+              "999978     1.842736\n",
+              "999979     3.689741\n",
+              "999980     4.456025\n",
+              "999981     3.622864\n",
+              "999982     1.162477\n",
+              "999983     0.806466\n",
+              "999984     8.401025\n",
+              "999985     1.344648\n",
+              "999986     0.821492\n",
+              "999987     0.240398\n",
+              "999988     0.000000\n",
+              "999989     1.102526\n",
+              "999990     1.424234\n",
+              "999991     3.036671\n",
+              "999992     1.574966\n",
+              "999993     3.742170\n",
+              "999994     6.433776\n",
+              "999995     1.879763\n",
+              "999996     0.000000\n",
+              "999997     1.761741\n",
+              "999998     1.842683\n",
+              "999999     0.758051\n",
+              "Length: 999912, dtype: float64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 100
+        }
+      ]
     },
     {
       "metadata": {
@@ -329,11 +407,11 @@
       "metadata": {
         "id": "qDFecUfZ1X2R",
         "colab_type": "code",
+        "outputId": "28c908ee-761a-48dc-9f1f-e701fae71fd3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 191
-        },
-        "outputId": "a875e92d-8149-439d-e322-d33af0488fe6"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -341,7 +419,7 @@
         "\n",
         "chunk.dtypes"
       ],
-      "execution_count": 79,
+      "execution_count": 102,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -362,7 +440,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 79
+          "execution_count": 102
         }
       ]
     },
@@ -388,6 +466,80 @@
     {
       "metadata": {
         "id": "VDEGRPWr4POy",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "PDQGmr2n9NXO",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "# **Análise exploratória de dados**\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "\n",
+        "**Como é cobrada a taxa de taxi em NYC:**\n",
+        "\n",
+        "1 - A taxa inicial é de **$2.50**\n",
+        "\n",
+        "2 - Mais  **50 cents ** a cada 1/5 de Milha (0,321869 km) acima de 12 mph (19,3121 km/h) ou a cada minuto em tráfico devagar\n",
+        "\n",
+        "3 - **50 cents**  de taxa adicional para todas viagens que terminam em NYC, Nassau, Suffolk, Westchester, Rockland, Dutchess, Orange ou Putnam Counties\n",
+        "\n",
+        "4 - ** 30 cents** de taxa de melhoramento\n",
+        "\n",
+        "5 - ** 50 cents ** de taxa para tráfego entre **8pm** e **6am**\n",
+        "\n",
+        "6 - ** $1.00 ** de taxa de hora do rush (**4pm ate 8pm**) em dias de semana, não se aplicando a feriados\n",
+        "\n",
+        "7 -  Taxa de congestionamento de ** 2.50 ** (Taxi amarelo) , ** 2.75** (Taxi verde ou FHV) ou **75 cents** para corridas compartilhadas para todas as corridas que começam, terminam ou passam por Manhattan south of 96th street\n",
+        "\n",
+        "8 - Pedágios e gorjetas são acrescidos caso necessário\n",
+        "\n",
+        "**Hipóteses:**\n",
+        "\n",
+        "1 - A distância percorrida impacta no valor da taxa\n",
+        "\n",
+        "2 - O Número de pessoas impacta no valor da taxa\n",
+        "\n",
+        "3 - O horário o qual o taxi foi pego impacta no valor\n",
+        "\n",
+        "4 - O dia da semana o qual o taxi foi pego impacta no valor\n",
+        "\n",
+        "5 - O Taxi foi pego em um aeroporto, onde a taxa é maior\n",
+        "\n",
+        "6 - Os meses impactam no valor da taxa?\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "FLhNFsr4CvNR",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##**Hipótese 1**\n",
+        "\n",
+        "---\n",
+        "A distância impacta no valor da taxa?\n"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "NU0qgaLX8-gg",
         "colab_type": "code",
         "colab": {}
       },
