--- a/houseprice.ipynb
+++ b/houseprice.ipynb
@@ -5323,7 +5323,83 @@
     },
     {
       "metadata": {
+        "id": "uK4D_mQX_kDf",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "Vamos facilitar a visualização da matriz de correlação ao clusterizar ela"
+      ]
+    },
+    {
+      "metadata": {
         "id": "Mp8z0gGdw4N_",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "import scipy.cluster.hierarchy as spc"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "VTwJLYqH_7Kl",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "pdist = spc.distance.pdist(new_corr)\n",
+        "\n",
+        "linkage =  spc.linkage(pdist, method='complete')\n",
+        "\n",
+        "idx = spc.fcluster(linkage, 0.5 * pdist.max(), 'distance')\n",
+        "\n",
+        "\n",
+        "colunas = [new_corr.columns.tolist()[i] for i in list((np.argsort(idx)))]\n",
+        "\n",
+        "teste = new_corr.new_corr.reindex_axis\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "9Y82xiY8AH4i",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "abad8704-fa60-41bc-fff7-d08ee3000d6d"
+      },
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.70014828, 2.78823869, 2.8503784 , ..., 4.12034157, 0.03558784,\n",
+              "       4.10841433])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 67
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "Gp4aa1zOAIqM",
         "colab_type": "code",
         "colab": {}
       },
